[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 84.0
margin_bottom = 116.0

[node name="NewGame" type="Button" parent="VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Exit")
text = "New Game"

[node name="LoadGame" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Load Game"

[node name="Database" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 84.0
margin_bottom = 68.0
text = "Database"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 84.0
margin_bottom = 92.0
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 84.0
margin_bottom = 116.0
focus_neighbour_bottom = NodePath("../NewGame")
text = "Exit"

[node name="Prototype" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 84.0
margin_bottom = 140.0
focus_neighbour_bottom = NodePath("../NewGame")
text = "Prototype"

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Database" to="." method="_on_Database_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="VBoxContainer/Prototype" to="." method="_on_Prototype_pressed"]
